@@ -2,7 +2,9 @@ systemd System and Service Manager
 
    systemd (214.9-dev)
 ~~~~~~~
-
+ * core:
+ 	- remove dbus CanStart get property;
+ 
    systemd (214.8)
 ~~~~~~~
  * core:
